--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -20,7 +20,7 @@
           .catch((registrationError) => {
             console.error(
               "Service Worker registration failed: ",
-              registrationError
+              registrationError,
             );
           });
       });
